--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto">
     <title>Signup Form Project</title>
 </head>
 <body>
-    
+    <div class="test">Ashina Corp.</div>
+    <img src="logo.svg">
 </body>
 </html>
