--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Signup Form Project</title>
 </head>
 <body>
-    <div class="test">Ashina Corp.</div>
-    <img src="logo.svg">
+       <img src="heroCastle.png">
+       <h2 class="test">Ashina Corp.</div>
 </body>
 </html>
