add initial scaffolding

--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
     <title>Signup Form Project</title>
 </head>
 <body>
-       <img src="heroCastle.png">
-       <h2 class="test">Ashina Corp.</div>
+    <div class="img"><img src="heroCastle.png"></div>
+    <div class="rightPane">
+    <div class="right1">
+        <h2>Founded by Isshin Ashina, a legendary swordsman lauded as the hero of the north, who defended the land of Ashina from all military threats. The clan is now facing imminent obliteration by an incoming army.</h2>
+        <br>
+        <h2><strong>Hesitation is defeat</strong></h2>
+    </div>
+    <div class="right2">
+        <h2>Join the Ashina Clan</h2>
+        <form id="form">
+            <label for="firstName">First Name</label><input type="text" name="firstName" id="firstName" minlength="1" placeholder="Sekiro">
+        </form>
+    </div>
+    <div class="right3">
+        <button type="submit" form="form">Enlist</button>
+        <br>
+        <p>Part of Ashina Corp already? <a href="login.html">Ressurect</p>
+    </div>
+    </div>
 </body>
 </html>
