add responsive flex properties to containers, img

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Signup Form Project</title>
 </head>
 <body>
-    <div class="img"><img src="heroCastle.png"></div>
+    <img src="heroCastle.png">
     <div class="rightPane">
     <div class="right1">
         <h2>Founded by Isshin Ashina, a legendary swordsman lauded as the hero of the north, who defended the land of Ashina from all military threats. The clan is now facing imminent obliteration by an incoming army.</h2>
