--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <title>Signup Form Project</title>
 </head>
 <body>
-    <img src="heroCastle.png">
+    <div class="hero">
+        <!-- <img src="heroCastle.png"> -->
+        <div class="placard">Ashina Corp. <embed type="image/svg+xml" src="logo.svg" class="logo"></div>
+    </div>
     <div class="rightPane">
     <div class="right1">
         <h2>Founded by Isshin Ashina, a legendary swordsman lauded as the hero of the north, who defended the land of Ashina from all military threats. The clan is now facing imminent obliteration by an incoming army.</h2>
