--- a/index.html
+++ b/index.html
@@ -68,10 +68,12 @@
     </div>
     <div class="right3">
         <!-- Form buttons -->
+    <div class="right3Content">
         <button type="submit" form="form">Enlist</button>
         <button type="reset" form="form">Reset</button>
         <br>
         <p>Part of Ashina Corp already? <a href="login.html">Ressurect</p>
+    </div>
     </div>
     </div>
 </body>
