add gradients (step 1)

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <button type="submit" form="form">Enlist</button>
         <button type="reset" form="form">Reset</button>
         <br>
-        <p>Part of Ashina Corp already? <a href="login.html">Ressurect</p>
+        <p>Part of Ashina Corp already? <a href="login.html">Resurrect</a></p>
     </div>
     </div>
     </div>
