add number placeholder

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <div class="inputGroup">
             <label for="number">Number</label>
-            <input type="number" name="number" id="number">
+            <input type="tel" name="number" id="number" placeholder="022 123 4567">
         </div>
         </fieldset>
         <fieldset>
