add full form styling, validation

--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
         
         <!-- Here begins the form -->
         <!-- -------------------- -->
-    <form id="form" action="example.com/path" method="post">
+    <form id="form" action="index.html" method="post">
         <h2>Join the Ashina Clan</h2>
         <fieldset>
         <!-- <legend>Thou name</legend> -->
         <!-- 'Label' is for the frontend, 'Name' is for the backend, 'For' links to 'id' -->
          <div class="inputGroup">
             <label for="firstName">First Name</label>
-            <input type="text" name="firstName" id="firstName" minlength="1" placeholder="Sekiro">
+            <input type="text" name="firstName" id="firstName" minlength="1" placeholder="Sekiro" required maxlength="30">
         </div>
         <div class="inputGroup">
             <label for="lastName">Last Name</label>            
-            <input type="text" name="lastName" id="lastName" minlength="1" placeholder="Wolf">
+            <input type="text" name="lastName" id="lastName" minlength="1" placeholder="Wolf" required maxlength="30">
          </div>
         </fieldset>
         <fieldset>
         <!-- <legend>Contact details</legend> -->
         <div class="inputGroup">
             <label for="email">Email</label>
-            <input type="email" name="email" id="email">
+            <input type="email" name="email" id="email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
         </div>
         <div class="inputGroup">
             <label for="number">Number</label>
@@ -55,11 +55,11 @@
         <!-- <legend>Password</legend> -->
         <div class="inputGroup">
             <label for="password">Password</label>
-            <input type="password" name="password" id="password">
+            <input type="password" name="password" id="password" required minlength="6" maxlength="20" title="Password must be between 6 and 20 chars">
         </div>
         <div class="inputGroup">
             <label for="passwordConfirm">Confirm Password</label>
-            <input type="password" name="passwordConfirm" id="passwordConfirm">
+            <input type="password" name="passwordConfirm" id="passwordConfirm" required minlength="6" maxlength="20">
         </div>
         </fieldset>
     </form>
@@ -72,7 +72,7 @@
         <button type="submit" form="form">Enlist</button>
         <button type="reset" form="form">Reset</button>
         <br>
-        <p>Part of Ashina Corp already? <a href="login.html">Resurrect</a></p>
+        <p>Part of Ashina Corp already? <a href="#">Resurrect</a></p>
     </div>
     </div>
     </div>
