add image credit and final adjustments

--- a/index.html
+++ b/index.html
@@ -12,22 +12,27 @@
     <div class="hero">
         
         <div class="placard">
-            <p>Ashina Corp.</p>
-            <embed type="image/svg+xml" alt="Ashina Corp. Logo" src="logo.svg" class="logo">
+            <p>Mishima Hvy.</p>
+            <embed type="image/svg+xml" alt="Mishima Hvy. Logo" src="logo.svg" class="logo">
+        </div>
+        <div class="credit">
+            <p>Photo by <a href="https://unsplash.com/@raddfilms">Redd F</a></p>
+            <p>Logo by <a href="https://www.behance.net/heyrabbit">Hey Rabbit</a></p>
         </div>
     </div>
     <div class="rightPane">
     <div class="right1">
-        <h2>Founded by Isshin Ashina, a legendary swordsman lauded as the hero of the north, who defended the land of Ashina from all military threats. The clan is now facing imminent obliteration by an incoming army.</h2>
+        <h2>Mishima Heavy Industries is the national leader in the heavy arms and aeronautical research space. Our visions are achieved through the unity of our people.</h2>
         <br>
-        <h2><strong>Hesitation is defeat</strong></h2>
+        <h2>We aim to bring next-gen technology, today.</h2>
+        <h2><strong>Join us.</strong></h2>
     </div>
     <div class="right2">
         
         <!-- Here begins the form -->
         <!-- -------------------- -->
     <form id="form" action="index.html" method="post">
-        <h2>Join the Ashina Clan</h2>
+        <h2>Enlist with Mishima Heavy Industries</h2>
         <fieldset>
         <!-- <legend>Thou name</legend> -->
         <!-- 'Label' is for the frontend, 'Name' is for the backend, 'For' links to 'id' -->
@@ -72,7 +77,7 @@
         <button type="submit" form="form">Enlist</button>
         <button type="reset" form="form">Reset</button>
         <br>
-        <p>Part of Ashina Corp already? <a href="#">Resurrect</a></p>
+        <p>Part of Mishima Hvy. already? <a href="#">Login here</a></p>
     </div>
     </div>
     </div>
